--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
             sourceCompatibility JavaVersion.VERSION_1_8
             targetCompatibility JavaVersion.VERSION_1_8
         }
+        buildFeatures{
+            dataBinding = true
+            viewBinding = true
+        }
 
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -51,4 +55,8 @@ dependencies {
     implementation 'com.rxjava.rxlife:rxlife:1.0.9'
     api 'com.tencent:mmkv:1.2.11'
     api 'com.getkeepsafe.relinker:relinker:1.4.4'
+    implementation('com.github.bumptech.glide:glide:4.9.0')
+    implementation('io.reactivex.rxjava2:rxjava:2.2.8')
+    implementation('com.google.code.gson:gson:2.8.6')
+    implementation('com.ruffian.library:RWidgetHelper-AndroidX:0.0.9');
 }
