--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,6 @@ dependencies {
     implementation('com.github.bumptech.glide:glide:4.9.0')
     implementation('io.reactivex.rxjava2:rxjava:2.2.8')
     implementation('com.google.code.gson:gson:2.8.6')
-    implementation('com.ruffian.library:RWidgetHelper-AndroidX:0.0.9');
+    implementation('com.ruffian.library:RWidgetHelper-AndroidX:0.0.9')
+    implementation 'com.github.zhpanvip:bannerviewpager:3.5.4'
 }
