--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     implementation('com.google.code.gson:gson:2.8.6')
     implementation('com.ruffian.library:RWidgetHelper-AndroidX:0.0.9')
     implementation 'com.github.zhpanvip:bannerviewpager:3.5.4'
+    implementation 'com.github.Ye-Miao:StatusBarUtil:1.7.5'
 }
