--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,11 +62,12 @@ dependencies {
     implementation 'com.tencent:mmkv:1.2.11'
     implementation 'com.getkeepsafe.relinker:relinker:1.4.4'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation('io.reactivex.rxjava2:rxjava:2.2.8')
     implementation('com.google.code.gson:gson:2.8.6')
     implementation('com.ruffian.library:RWidgetHelper-AndroidX:0.0.9')
     implementation 'com.github.zhpanvip:bannerviewpager:3.5.4'
     implementation 'com.github.Ye-Miao:StatusBarUtil:1.7.5'
+    implementation('com.squareup.picasso:picasso:2.5.2')
+    implementation 'com.guolindev.permissionx:permissionx:1.6.1'
 }
 
