--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,13 +56,13 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.github.JessYanCoding:AndroidAutoSize:1.2.1'
     implementation 'com.rxjava.rxhttp:rxhttp:1.1.5'
     kapt 'com.rxjava.rxhttp:rxhttp-compiler:1.1.0'
     implementation 'com.rxjava.rxlife:rxlife:1.0.9'
     implementation 'com.tencent:mmkv:1.2.11'
     implementation 'com.getkeepsafe.relinker:relinker:1.4.4'
-    implementation('com.github.bumptech.glide:glide:4.9.0')
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation('io.reactivex.rxjava2:rxjava:2.2.8')
     implementation('com.google.code.gson:gson:2.8.6')
     implementation('com.ruffian.library:RWidgetHelper-AndroidX:0.0.9')
