--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,5 +80,6 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14'
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation 'net.zetetic:android-database-sqlcipher:3.5.9@aar'
 }
 
