--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:name=".activity.ui.PhotoActivity"
             android:exported="true" />
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".activity.ui.login.LoginActivity"
             android:exported="true"
             android:label="@string/title_activity_login" />
         <activity
@@ -36,7 +36,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".activity.ui.login.LoginActivity" />
+        <activity android:name=".activity.DogInfoActivity"/>
     </application>
 
 </manifest>
